Multiline Strings should work now with --enable-preview in Windows